# google-search-py

./: .gitignore  README.md  pyproject.toml
googlesearch/: __init__.py
