[tool.poetry]
name = "google-search-py"
version = "3.0.0"
description = "Google search from python"
authors = ["sabitm <sabitmaulanaa@gmail.com>"]
readme = "README.md"
license = ["BSD"]
packages = [{ include = "google_search_py" }]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = ">=4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
